--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -208,7 +208,7 @@
       <section class="welcome-wrap padding-top-30 sm-horizontal-15">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-bottom-none">
           <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-left-none padding-bottom-40 scroll_effect fadeInUp">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-bottom-40 scroll_effect fadeInUp">
               <h4 class="margin-bottom-25 margin-top-none">About <strong>Loans</strong> </h4>
               <div class="search-form margin-top-20 padding-vertical-20">
                 <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94"></iframe> -->
@@ -218,7 +218,7 @@
                 </video>
               </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-right-none padding-bottom-40 scroll_effect fadeInUp" data-wow-delay='.2s'>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-bottom-40 scroll_effect fadeInUp" data-wow-delay='.2s'>
               <h4 class="margin-bottom-25 margin-top-none">About <strong>Cards</strong></h4>
               <div class="search-form margin-top-20 padding-vertical-20">
                 <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94"></iframe> -->
