--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -34,18 +34,18 @@
                 <p><i class="fa fa-map-marker"></i><strong>Address:</strong></p>
               </div>
               <div class="contact_address">
-                <p class="margin-bottom-none">Company Name<br>
-                  1234 Street Name <br>
-                  City Name, AB  12345 <br>
-                  United States
+                <p class="margin-bottom-none">
+                  2nd Floot,<br>
+                  Gupta Travels Building, <br>
+                  Lokmat Square, Nagpur - 440012
                 </p>
               </div>
             </div>
             <div class="address clearfix address_details margin-right-25 padding-bottom-40">
               <ul class="margin-bottom-none">
-                <li><i class="fa fa-phone"></i><strong>Phone:</strong> <span>1-800-123-4567</span></li>
-                <li><i class="fa fa-envelope-o"></i><strong>Email:</strong> <a href="mailto:sales@company.com">sales@company.com</a></li>
-                <li class="padding-bottom-none"><i class="fa fa-laptop"></i><strong>Web:</strong> <a href="http://company.com/">www.company.com</a></li>
+                <li><i class="fa fa-phone"></i><strong>Phone:</strong> <a href="tel:+918806601122">+91-88066-01122</a></li>
+                <li><i class="fa fa-envelope-o"></i><strong>Email:</strong> <a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
+                <li class="padding-bottom-none"><i class="fa fa-laptop"></i><strong>Web:</strong> <a href="http://www.growwcapital.com/">www.growwcapital.com/</a></li>
               </ul>
             </div>
           </div>
