--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
             <div class="col-md-12">
               <form action="/" style="display: inline-flex;">
                 <input type="text" placeholder="Search.." class="search-loan" name="search">
-                <button type="submit" class="btn-search-loan"><i class="fa fa-search"></i></button>
+                <!-- <button type="submit" class="btn-search-loan"><i class="fa fa-search"></i></button> -->
               </form>
             </div>
           </div>
