--- a/app/views/home/pre_approved.html.erb
+++ b/app/views/home/pre_approved.html.erb
@@ -14,3 +14,41 @@
     </div>
   </div>
 </section>
+<section class="personal-loan-section custom-container">
+  <%= form_for @pre_approved_offer, :url => { :action => "pre_approved_offer" }, html: { id:  "pre_approved_offer", class: "pre_approved_offer" } do |f| %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <h3>Pre Approved Offer</h3>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>First Name <span>*</span></span>
+            <%= f.text_field(:first_name, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Last Name <span>*</span></span>
+            <%= f.text_field(:last_name, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Mobile Number <span>*</span></span>
+            <%= f.number_field(:mobile_no, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">      
+          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+      </div>
+    </div>
+  <%end%>
+</section>
