(Fixed) pre approved offer feature implemented.

--- a/app/views/home/contact_us.html.erb
+++ b/app/views/home/contact_us.html.erb
@@ -35,7 +35,7 @@
               </div>
               <div class="contact_address">
                 <p class="margin-bottom-none">
-                  2nd Floot,<br>
+                  2nd Floor,<br>
                   Gupta Travels Building, <br>
                   Lokmat Square, Nagpur - 440012
                 </p>
