--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -164,7 +164,7 @@
             <h4>Contact us</h4>
             <div class="footer-contact">
               <ul>
-                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 2nd Floot, Gupta Travels Building, Lokmat Square, Nagpur - 440012</li>
+                <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> 2nd Floor, Gupta Travels Building, Lokmat Square, Nagpur - 440012</li>
                 <li><i class="fa fa-phone"></i> <strong>Phone:</strong><a href="tel:+918806601122">+91-88066-01122</a></li>
                 <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong><a href="mailto:support@growwcapital.com">support@growwcapital.com</a></li>
               </ul>
