(fixed) removed session

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -425,6 +425,10 @@ textarea.error, input.error, select.error {
 }
 
 @media(max-width: 570px) {
+  .contact-info div {
+    width: 177px;
+    word-break: break-word;
+  }
   .pre-appr {
     .card, .loan {
       width: 50%;
