(WIP) send otp, email and resend otp implemented.

--- a/app/views/home_loan/step2.html.erb
+++ b/app/views/home_loan/step2.html.erb
@@ -29,7 +29,7 @@
             <%= f.number_field(:otp, class: "form-control", value: "") %>
           </div> 
           <button type="submit" class="btn btn-default">Submit</button>
-          <a href="javascript:void(o)" id="resend-otp" style="float: right;">Resend</a>
+          <a href="javascript:void(o)" id="home-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
       </div>
