--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,6 +81,9 @@
                   <li class="<%= active_tab('about_us') %>">
                     <%= link_to "About Us", about_us_path, method: :get %>
                   </li>
+                  <li class="<%= active_tab('emi_calculator') %>">
+                    <%= link_to "EMI Calculator", emi_calculator_path, method: :get %>
+                  </li>
                   <li class="<%= active_tab('blog') %>">
                     <%= link_to "Blog", blog_path, method: :get %>
                   </li>
@@ -99,6 +102,9 @@
                   </li>
                   <li class="<%= active_tab('about_us') %>">
                     <%= link_to "About Us", about_us_path, method: :get %>
+                  </li>
+                  <li class="<%= active_tab('emi_calculator') %>">
+                    <%= link_to "EMI Calculator", emi_calculator_path, method: :get %>
                   </li>
                   <li class="<%= active_tab('blog') %>">
                     <%= link_to "Blog", blog_path, method: :get %>
