--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,6 +31,7 @@
       jQuery(document).ready(function() {
           revapi = jQuery("#rev_slider").revolution({
               sliderType:"standard",
+              loop: true,
               sliderLayout:"fullwidth",
               delay:9000,
               navigation: {
