--- a/app/views/personal_loan/step2.html.erb
+++ b/app/views/personal_loan/step2.html.erb
@@ -28,7 +28,7 @@
             <%= f.number_field(:otp, class: "form-control", value: "") %>
           </div> 
           <button type="submit" class="btn btn-default">Submit</button>
-          <a href="javascript:void(o)" id="resend-otp" style="float: right;">Resend</a>
+          <a href="javascript:void(o)" id="personal-loan-resend-otp" style="float: right;">Resend</a>
         </div>
         <div class="col-md-4"></div>
       </div>
