--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,36 @@
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: #ffffff;
+  outline: none;
+  opacity: 1;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  border-radius: 100px;
+}
+
+.slider:hover {
+  //opacity: 0.7;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  background: #0854a0;
+  cursor: pointer;
+  border-radius: 100px; 
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -36,6 +69,18 @@ input[type=number] {
 
 .bottom-video {
   width: 100%;  
+}
+
+.emi-calc {
+  border-top: solid 1px #ee4031;
+}
+
+.canvasjs-chart-credit {
+  display: none;
+}
+
+.tot-amt, .mon-emi, .pri-amt, .tot-int {
+  font-weight: bold;
 }
 
 input[type="email"], input[type="password"], input[type="number"], input[type="text"], input[type="date"], select, div.styled, input[type="file"] {
