(Fixed) updated the home page.

--- a/app/views/professional_loan/step4.html.erb
+++ b/app/views/professional_loan/step4.html.erb
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <span>Current EMI: <span>*</span></span>
+            <span>Current Paying EMI (Rs.): <span>*</span></span>
             <%= f.number_field(:current_emi, class: "form-control") %>
           </div>
         </div>
