--- a/app/views/used_car_loan/step4.html.erb
+++ b/app/views/used_car_loan/step4.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="col-md-4">
         <div class="form-group">
-          <span>Current EMI <span>*</span></span>
+          <span>Current Paying EMI (Rs.) <span>*</span></span>
           <%= f.number_field(:current_emi, class: "form-control") %>
         </div>
       </div>
@@ -201,7 +201,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <span>Current EMI (Rs.) <span>*</span></span>
+            <span>Current Paying EMI (Rs.) <span>*</span></span>
             <%= f.number_field(:current_emi, step: 0.5, class: "form-control") %>
           </div>
         </div>
