--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -57,7 +57,26 @@ input[type=number] {
   background-color: #fff;
   box-shadow: 0 2px 4px 0 rgba(5,47,95,.04), 0 12px 16px 0 rgba(52,105,203,.12);
   border-radius: 10px;
-  margin: 0 12px 24px;
+  margin: 0 0px 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -webkit-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+}
+
+.part-img-effect {
+  visibility: visible;
+  animation-name: bounceInUp;
+  width: 150px;
+  height: 150px;
+  padding: 16px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgba(5,47,95,.04), 0 12px 16px 0 rgba(52,105,203,.12);
+  border-radius: 10px;
+  margin: 0 0px 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,16 +104,12 @@ input[type=number] {
 
 input[type="email"], input[type="password"], input[type="number"], input[type="text"], input[type="date"], select, div.styled, input[type="file"] {
   border: 2px solid #767171 !important;
-  height: 45px !important;
+  height: 35px !important;
 }
 
 textarea {
   border: 2px solid #767171 !important;
-  height: 100px;
-}
-
-.partners {
-  padding-top: 38px;  
+  height: 80px;
 }
 
 footer {
@@ -136,8 +151,12 @@ input, select{
 }
 
 .padding-loans {
-  padding-bottom: 40px;
-  padding-top: 40px;
+  //padding-bottom: 10px;
+  //padding-top: 10px;
+}
+
+.owl-dots {
+  display: none;
 }
 
 .col-lg-2-5, .col-lg-2-5 {
@@ -470,6 +489,26 @@ textarea.error, input.error, select.error {
 }
 
 @media(max-width: 570px) {
+  .owl-carousel .owl-nav .owl-next {
+    right: 10px;
+  }
+  .owl-carousel .owl-nav .owl-prev {
+    left: 31px !important;
+  }
+  .part-img-effect {
+    margin: 0px auto;
+  }
+  .ind-section:after {
+    bottom: -5px;
+    width: 65px;
+  }
+
+  .ind-section {
+    font-size: 18px;
+  }
+  .welcome-wrap h4 {
+    font-size: 16px;
+  }
   .contact-info div {
     width: 177px;
     word-break: break-word;
@@ -493,7 +532,7 @@ textarea.error, input.error, select.error {
   }
   .navbar-toggler:not(:disabled):not(.disabled) {
     background: #0854a0;
-    margin-top: 18px;
+    margin-top: 10px;
   }
   .div-loan > .loan-img1,
   .div-loan > .loan-img2,
