--- a/app/views/business_loan/step4.html.erb
+++ b/app/views/business_loan/step4.html.erb
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <span>Current EMI (Rs.) <span>*</span></span>
+            <span>Current Paying EMI (Rs.) <span>*</span></span>
             <%= f.number_field(:current_emi, step: 0.5, class: "form-control") %>
           </div>
         </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="col-md-3">
           <div class="form-group">
-            <span>Business Pan Number: <span>*</span></span>
+            <span>Business Pan Number: <span></span></span>
             <%= f.text_field(:business_pan_number, class: "form-control") %>
           </div>
         </div>
