--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,6 @@
             <div class="col-md-12">
               <form action="/" style="display: inline-flex;">
                 <input type="text" placeholder="Search.." class="search-loan" name="search">
-                <!-- <button type="submit" class="btn-search-loan"><i class="fa fa-search"></i></button> -->
               </form>
             </div>
           </div>
@@ -20,10 +19,10 @@
         <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94">
         </iframe> -->
         <%#= video_tag "diwali1.mp4", :controls => true, class: "top-video", type: "video/mp4" %>
-        <video class="top-video" controls>
+        <!-- <video class="top-video" controls>
           <source src="assets/diwali1.mp4" type="video/mp4">
           Your browser does not support the video tag.
-        </video>        
+        </video>  -->
       </div>
     </div>
     <script>
@@ -41,24 +40,67 @@
               gridheight:645
           });
 
-      $('.loans, .cards, .partners').owlCarousel({
+        $('.cards').owlCarousel({
           autoplay:false,
-          // autoplayTimeout:2000,
-          // loop:true,
           margin:10,
           nav:true,
           responsive:{
             0:{
-                items:1
+              items:1
             },
             600:{
-                items:3
+              items:3
             },
             1000:{
-                items:5
+              items:5
             }
           }
-      });
+        });
+
+        $('.partners').owlCarousel({
+          autoplay:false,
+          autoplayTimeout:2000,
+          loop:true,
+          margin:10,
+          items: 6,
+          nav:true,
+          autoplay:true,
+          autoplayTimeout:1000,
+          autoplayHoverPause:true,
+          responsive:{
+            0:{
+              items:1
+            },
+            600:{
+              items:3
+            },
+            1000:{
+              items:7
+            }
+          }
+        });
+
+        $('.loans').owlCarousel({
+          autoplay:false,
+          autoplayTimeout:2000,
+          loop:true,
+          margin:10,
+          nav:true,
+          autoplay:true,
+          autoplayTimeout:1000,
+          autoplayHoverPause:true,
+          responsive:{
+            0:{
+              items:1
+            },
+            600:{
+              items:3
+            },
+            1000:{
+              items:5
+            }
+          }
+        });
       });
     </script>
   </div>
@@ -206,11 +248,11 @@
           <span class="ind-section">Loans & Card Benefit Description</span>
         </h2>
       </div>
-      <section class="welcome-wrap padding-top-30 sm-horizontal-15">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-bottom-none">
+      <section class="welcome-wrap sm-horizontal-15">
+        <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 margin-bottom-none"> -->
           <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-bottom-40 scroll_effect fadeInUp">
-              <h4 class="margin-bottom-25 margin-top-none">About <strong>Loans</strong> </h4>
+              <h4 class="">About <strong>Loans</strong> </h4>
               <div class="search-form margin-top-20 padding-vertical-20">
                 <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94"></iframe> -->
                 <video class="bottom-video" controls>
@@ -220,7 +262,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 welcome padding-bottom-40 scroll_effect fadeInUp" data-wow-delay='.2s'>
-              <h4 class="margin-bottom-25 margin-top-none">About <strong>Cards</strong></h4>
+              <h4 class="">About <strong>Cards</strong></h4>
               <div class="search-form margin-top-20 padding-vertical-20">
                 <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94"></iframe> -->
                 <video class="bottom-video" controls>
@@ -230,7 +272,7 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
       <div class="row">
         <h2 class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -238,46 +280,46 @@
         </h2>
       </div>
       <section class="padding-loans">
-        <div class="row owl-carousel partners">
-          <div class="scroll_effect img-effect bounceInUp">
+        <div class="owl-carousel partners">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "hdfc-bank.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "idfc-bank.gif"%>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "yes-bank.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "tata-capital.webp"%>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "icici-bank.png"%>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "axis-bank.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp" style="background-color: #e88244;">
+          <div class="scroll_effect part-img-effect bounceInUp" style="background-color: #e88244;">
             <%= image_tag "aditya-birla.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "dbs_bank.svg"%>
           </div>
-          <div class="scroll_effect img-effect bounceInUp" style="background-color: #000000;">
+          <div class="scroll_effect part-img-effect bounceInUp" style="background-color: #000000;">
             <%= image_tag "bajaj-logo.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "fllutoran.png" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
+          <div class="scroll_effect part-img-effect bounceInUp">
             <%= image_tag "au-bank.webp" %>
           </div>
-          <div class="scroll_effect img-effect bounceInUp">
-            <%= image_tag "hero.png" %>
+          <div class="scroll_effect part-img-effect bounceInUp">
+            <%= image_tag "hero-fincorp.png" %>
           </div>
         </div>
       </section>
-      <section class="testimonital">
+      <!-- <section class="testimonital">
         <div class="row">
           <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
             <div class="card">
@@ -308,7 +350,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
   </div>
 </section>
