--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
   </head>
   <body>
     <header data-spy="affix" data-offset-top="1" class="clearfix">
-      <section class="toolbar">
+      <%= render "layouts/flash_messages" %>
+      <!-- <section class="toolbar">
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
@@ -55,7 +56,7 @@
           </div>
         </div>
         <div class="toolbar_shadow"></div>
-      </section>
+      </section> -->
       <div class="bottom-header" >
         <div class="container">
           <nav class="navbar navbar-expand-md navbar-default" role="navigation">
@@ -90,6 +91,18 @@
                   <li class="<%= active_tab('contact_us') %>">
                     <%= link_to "Contact Us", contact_us_path, method: :get %>
                   </li>
+                  <%if current_user.nil?%>
+                    <li class="<%= active_tab('contact_us') %>">
+                      <%= link_to "Login", new_user_session_path, method: :get %>
+                    </li>
+                  <% else %>
+                    <li>
+                      <%= link_to "My Profile", home_profile_path, method: :get %>
+                    </li>
+                    <li>
+                      <%= link_to "Log Out", destroy_user_session_path, method: :get %>
+                    </li>
+                  <% end %>
                 </ul>
               </div>
               <div class="mobile-menu-dropdown collapse navbar-collapse" id="navbar-collapse-mobile">
@@ -112,6 +125,18 @@
                   <li class="<%= active_tab('contact_us') %>">
                     <%= link_to "Contact Us", contact_us_path, method: :get %>
                   </li>
+                  <%if current_user.nil?%>
+                    <li class="<%= active_tab('contact_us') %>">
+                      <%= link_to "Login", new_user_session_path, method: :get %>
+                    </li>
+                  <% else %>
+                    <li>
+                      <%= link_to "My Profile", home_profile_path, method: :get %>
+                    </li>
+                    <li>
+                      <%= link_to "Log Out", destroy_user_session_path, method: :get %>
+                    </li>
+                  <% end %>
                 </ul>
               </div>
             </div>
@@ -144,7 +169,7 @@
             <p>By subscribing to our company newsletter
               you will always be up-to-date on our latest
               promotions, deals and vehicle inventory!</p>
-            <%= form_for 'newsletter', url: { controller: "home", action: "newsletter"}, html: {id:  "newsletter", class: "newsletter"} do |f| %>
+            <%= form_for 'newsletter', path: home_newsletter_path, html: {id:  "newsletter", class: "newsletter"} do |f| %>
               <%= f.email_field(:email, class: "form-control", placeholder: "Email Address", required: true) %>
               <input type="submit" value="Subscribe" class="md-button" style="cursor: pointer;">
             <% end %>            
