--- a/app/views/loan_against_property/step4.html.erb
+++ b/app/views/loan_against_property/step4.html.erb
@@ -77,7 +77,7 @@
         </div>
         <div class="col-md-4">
           <div class="form-group">
-            <span>Current EMI <span>*</span></span>
+            <span>Current Paying EMI (Rs.) <span>*</span></span>
             <%= f.number_field(:current_emi, class: "form-control") %>
           </div>
         </div>
