(Fixed) updated the pans

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,7 @@
               sliderLayout:"fullwidth",
               delay:9000,
               navigation: {
-                  arrows:{enable:true}
+                arrows:{ enable:true }
               },
               gridwidth:1170,
               gridheight:645
@@ -207,9 +207,9 @@
             <%end%>
           </div>
           <div class="col-md-2">
-            <%= link_to used_car_loan_path('step1'), method: :get do %>
+            <%= link_to new_car_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
-                <h1 class="product-name">Used Car Loan</h1>
+                <h1 class="product-name">New  Car Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
                 <div class="product-icon">
                   <i class="fa fa-3x fa-car"></i>
@@ -218,9 +218,9 @@
             <%end%>
           </div>
           <div class="col-md-2">
-            <%= link_to new_car_loan_path('step1'), method: :get do %>
+            <%= link_to used_car_loan_path('step1'), method: :get do %>
               <div class="pb-product active">
-                <h1 class="product-name">New  Car Loan</h1>
+                <h1 class="product-name">Used Car Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
                 <div class="product-icon">
                   <i class="fa fa-3x fa-car"></i>
@@ -288,7 +288,7 @@
       </section> -->
       <div class="homeStrip">
         <div class="container">
-          <p>It has been brought to our notice that fraudsters are using Paisabazaar.com’s identity to send erroneous communication to dupe people.<br>
+          <p>It has been brought to our notice that fraudsters are using growwcapital’s identity to send erroneous communication to dupe people.<br>
               In case you get such communication<span>... <a class="view-more-btn" href="javascript:void(0);">View More</a></span></p>
           <div class="do-dont">
             <div>
@@ -313,7 +313,7 @@
                 <div class="pb-feature">
                   <span class="top-line"></span>
                   <h3>Why Choose GrowwCapital?</h3>
-                  <a href="https://www.paisabazaar.com/about-us" data-ga-label="contentAboutPaisabazaar" class="read-more-btn">Read More</a>
+                  <a href="/about_us" data-ga-label="contentAboutPaisabazaar" class="read-more-btn">Read More</a>
                 </div>
             </div>
             <div class="col-md-7">
