--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
               <div class="desktop-menu-dropdown collapse navbar-collapse">
                 <form action="/" style="display: inline-flex;">
                   <i class="fa fa-search loan-search-ico"></i>
-                  <input type="text" placeholder="Search here.." class="search-loan" name="search">
+                  <input type="text" placeholder="Search here.." class="search-loan" id="search-loan" name="search">
                 </form>
               </div>
               <div class="desktop-menu-dropdown collapse navbar-collapse" id="navbar-collapse-desktop">
